--- a/InfoPan.UW/InfoPan.UW/MainPage.xaml
+++ b/InfoPan.UW/InfoPan.UW/MainPage.xaml
@@ -7,7 +7,33 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid
+        x:Name="Layout" 
+        Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Loaded="Layout_Loaded">
+
+        <Button 
+            x:Name="feedBtn"
+            Content="Feed"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top" 
+            Margin="50" Click="feedBtn_Click"/>
+
+        <ListBox 
+            x:Name="izsuListBox" 
+            HorizontalAlignment="Left" 
+            Height="440" 
+            VerticalAlignment="Top" 
+            Width="450" Margin="50,100,0,0"/>
+
+        <WebView 
+            x:Name="webView"
+            HorizontalAlignment="Left" 
+            Height="440" 
+            VerticalAlignment="Top" 
+            Width="426" 
+            Margin="520,100,0,0"/>
+
+
 
     </Grid>
 </Page>
